--- a/style.css
+++ b/style.css
@@ -688,8 +688,18 @@ section.formcontato{
     width:250px;
     padding: 5px;
     color: white;
+    cursor: pointer;
     background-color: #0b57c2;
+    border: 1px solid;
+    border-radius: 8px;
     
+}
+#msg{
+    display: none;
+    padding:5px ;
+    background:rgb(6, 143, 6);
+    border: 1px solid white;
+    border-radius: 8px;
 }
 
 
